# zpg-projekt

./: AbstractTrans.cpp  AbstractTrans.h  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  Controller.h  DrawableObject.cpp  DrawableObject.h  Firefly.cpp  Firefly.h  Light.cpp  Light.h  Material.cpp  Material.h  Modell.cpp  Modell.h  ObjectFactory.cpp  ObjectFactory.h  ObjectManager.cpp  ObjectManager.h  Observer.cpp  Observer.h  ResourceManager.cpp  ResourceManager.h  Rotate.cpp  Rotate.h  Scale.cpp  Scale.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Skybox.cpp  (+15 more)
mar0963_prtsc/: mar0963_3c.mov  mar0963_3d.mov  mar0963_4.txt
shaders/: blinn.frag  fragment.glsl  fragmentColor.frag  fragment_phong_light.frag  lambert.frag  phong.frag  skybox.frag  skybox.vert  vertex.glsl  vertex.vert
